--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/redux": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-slider": "^1.3.1",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
   },
@@ -40,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.0"
   }
 }
